infra/k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hopngo-stg
  labels:
    name: hopngo-stg
    environment: staging
